# file_agent

./: .gitignore  Cargo.toml  README.ja.md  README.md  config.json  example.html
sample/: index.html  script.js  style.css
src/: main.rs
